--- a/package.json
+++ b/package.json
@@ -4,12 +4,14 @@
   "description": "Améliorer l'interface d'un site mobile avec des animations Css.",
   "main": "index.js",
   "scripts": {
-    "sass":"sass --watch ./sass/main.scss:./assets/css/style.css --style compressed"
+    "sass":"sass --watch ./sass/main.scss:./assets/css/style.css --style compressed",
+    "prefix": "postcss ./assets/css/style.css --use autoprefixer -d ./assets/css/prefixed/"
   },
   "repository": {
     "type": "git",
     "url": "Oh_my_Food"
   },
   "author": "euspod",
-  "license": "ISC"
+  "license": "ISC",
+  "browserslist": "last 4 versions"
 }
