--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Améliorer l'interface d'un site mobile avec des animations Css.",
   "main": "index.js",
   "scripts": {
-    "sass":"sass --watch ./sass/main.scss:./assets/css/style.css ",
+    "sass":"sass --watch ./sass/main.scss:./assets/css/style.css -w --style compressed",
     "prefix": "postcss ./assets/css/style.css --use autoprefixer -d ./assets/css/prefixed/"
   },
   "repository": {
